--- a/Detections/DetectionRuleTask.yaml
+++ b/Detections/DetectionRuleTask.yaml
@@ -1,70 +1,81 @@
-id: c1faf5e8-6958-11ec-90d6-0242ac120003
-name: Fake computer account created
+id: ee55dc85-d2da-48c1-a6c0-3eaee62a8d56
+name: User Account Created Using Incorrect Naming Format
 description: |
-   'This query detects domain user accounts creation (event ID 4720) where the username ends with $. 
-   Accounts that end with $ are normally domain computer accounts and when they are created the event ID 4741 is generated instead.
-   Ref: https://blog.menasec.net/2019/02/threat-hunting-6-hiding-in-plain-sights.html'
-severity: Medium
+  'This query looks for accounts being created where the name does not match a defined pattern.
+    Attackers may attempt to add accounts as a means of establishing persistant access to an environment, looking for anomalies in created accounts may help identify illegitimately created accounts.
+    Created accounts should be investigated to ensure they were legitimated created.
+    The user_regex field in the query needs to be populated with the expected pattern for the environment before deployment.
+    Ref: https://docs.microsoft.com/azure/active-directory/fundamentals/security-operations-user-accounts#accounts-not-following-naming-policies'
+severity: Low
 requiredDataConnectors:
-  - connectorId: SecurityEvents
+  - connectorId: AzureActiveDirectory
     dataTypes:
-      - SecurityEvent
-queryFrequency: 1h
-queryPeriod: 1h
+      - AuditLogs
+queryFrequency: 1d
+queryPeriod: 1d
 triggerOperator: gt
 triggerThreshold: 0
 tactics:
-  - DefenseEvasion
+  - Persistence
 relevantTechniques:
-  - T1564
+  - T1136.003
+tags:
+  - AADSecOpsGuide
 query: |
-  SecurityEvent
-  | where EventID == 4720 and TargetUserName endswith "$"
-  | summarize StartTime = min(TimeGenerated), EndTime = max(TimeGenerated) by Computer, SubjectUserName, SubjectDomainName, SubjectAccount, SubjectUserSid, SubjectLogonId, 
-  TargetUserName, TargetDomainName, TargetAccount, TargetSid, UserPrincipalName
-  | extend HostName = tostring(split(Computer, ".")[0]), DomainIndex = toint(indexof(Computer, '.'))
-  | extend HostNameDomain = iff(DomainIndex != -1, substring(Computer, DomainIndex + 1), Computer)
-  | project-away DomainIndex
+  // Add the environments expected username format regex below before deploying
+  let user_regex = "";
+  AuditLogs
+  | where OperationName =~ "Add user"
+  | where Result =~ "success"
+  | extend userAgent = tostring(AdditionalDetails[0].value)
+  | extend InitiatingAppName = tostring(InitiatedBy.app.displayName)
+  | extend InitiatingAppServicePrincipalId = tostring(InitiatedBy.app.servicePrincipalId)
+  | extend InitiatingUserPrincipalName = tostring(InitiatedBy.user.userPrincipalName)
+  | extend InitiatingAadUserId = tostring(InitiatedBy.user.id)
+  | extend InitiatingIPAddress = tostring(InitiatedBy.user.ipAddress)
+  | extend InitiatedBy = tostring(iff(isnotempty(InitiatingUserPrincipalName),InitiatingUserPrincipalName, InitiatingAppName))
+  | extend AddedUser = tostring(TargetResources[0].userPrincipalName)
+  | where AddedUser matches regex user_regex
+  | extend InitiatingAccountName = tostring(split(InitiatingUserPrincipalName, "@")[0]), InitiatingAccountUPNSuffix = tostring(split(InitiatingUserPrincipalName, "@")[1])
+  | extend TargetAccountName = tostring(split(AddedUser, "@")[0]), TargetAccountUPNSuffix = tostring(split(AddedUser, "@")[1])
 entityMappings:
   - entityType: Account
     fieldMappings:
-      - identifier: FullName
-        columnName: SubjectAccount
       - identifier: Name
-        columnName: SubjectUserName
-      - identifier: NTDomain
-        columnName: SubjectDomainName
-  - entityType: Account
-    fieldMappings:
-      - identifier: Sid
-        columnName: SubjectUserSid
+        columnName: InitiatingAppName
+      - identifier: AadUserId
+        columnName: InitiatingAppServicePrincipalId
   - entityType: Account
     fieldMappings:
       - identifier: FullName
-        columnName: TargetAccount
+        columnName: InitiatingUserPrincipalName
       - identifier: Name
-        columnName: TargetUserName
-      - identifier: NTDomain
-        columnName: TargetDomainName
+        columnName: InitiatingAccountName
+      - identifier: UPNSuffix
+        columnName: InitiatingAccountUPNSuffix
   - entityType: Account
     fieldMappings:
-      - identifier: Sid
-        columnName: TargetSid
-  - entityType: Host
+      - identifier: AadUserId
+        columnName: InitiatingAadUserId
+  - entityType: Account
     fieldMappings:
       - identifier: FullName
-        columnName: Computer
-      - identifier: HostName
-        columnName: HostName
-      - identifier: DnsDomain
-        columnName: HostNameDomain
-version: 1.0.3
+        columnName: AddedUser
+      - identifier: Name
+        columnName: TargetAccountName
+      - identifier: UPNSuffix
+        columnName: TargetAccountUPNSuffix
+  - entityType: IP
+    fieldMappings:
+      - identifier: Address
+        columnName: InitiatingIPAddress
+version: 1.1.0
 kind: Scheduled
 metadata:
     source:
         kind: Community
     author:
-        name: Vasileios Paschalidis
+        name: Microsoft Security Research
     support:
         tier: Community
     categories:
